# CodeGenDemo

./: .gitignore  CMakeLists.txt  Cij_Aik_Bkj_S_MT64x48x32_SN_K1.cpp  ClearTemp.sh  Compile.sh  IRTrans过程.mlir  LiSanHuaGuoCheng.cpp  README.md  ZhuanHuanGuoCheng.cpp  cfg.py  config.h.in  kcg_kernel-63e6e4.bc  llirBeforeDeal.mlir  llvm-ir.ll  llvm_ir.ll  makeAmdgcnToHsaco.sh  make_llir.sh  matmul.cpp  modify.md  output.ll  perfRecord.perflog  perfRecord_2.perflog  pmc_log_reader.py  runRoc.cpp  runkernel.cpp  runkernel_aftsmandregppl  runkernel_aftsmppl  runkernel_final  tempstub.c  test.amdgcn  test_1.amdgcn  testmm_v2.cpp  结果汇总.md  重构方案.md
Kernel/: matmul  matmul.cpp  matmul1  testmatmul  testmatmul.cpp  testmatmul_old  testmatmul_old.cpp  testmatmul_old1  testmatmul_v2
Runtime/: LauncherTemplate.cpp
Runtime/python/kcg/: Benchmark.sh  Cache.py  CompiledKernel.py  CompiledKernelFactory.py  ConfigGenerator.py  HIPLauncher.py  InfoDb.py  KCGCompiler.py  KCGTask.py  Kernel.py  Loader.py  Utils.py  amd_triton_kernel-762981.hsaco  analyze.py  correct.mlir  error.mlir  expr.py  kcg_kernel_-c7f248.hsaco  mlirError.mlir  mlirOK.mlir  mlir_trans2.mlir  mlir_trans3.mlir  temp.mlir  temp2.mlir  test.py  testBlas.py  testGetKernels.py  txt.mlir
Runtime/python/kcg/Operators/: matmul.py
Runtime/python/kcg/loaderCCode/: cuda.c  hip.c
TuningCombs/: best_combs_1024.json
TuningConfigs/: GEMM_cfgs_1.json  GEMM_configs.json  GEMM_configs_1024.json  GEMM_configs_2.json  GEMM_configs_4096.json  GEMM_single_test.json
ceshiData/kcg/: testBadcase.mlir  testPrint.mlir
cmake/: MLIRConfig.cmake
include/: KernelCodeGen.h  PassDetail.h  config.h  utils.h
include/Analysis/: Analyzer.h
include/Common/: ThreadPool.h  Utils.h
include/Conversion/: LoweringPasses.h  Optimizer.h  Rewriter.h
include/Conversion/General/: GeneralFuncs.h  Rewriter.h  Rewriter_.h
include/ModelManager/: ModelManager.h  OperatorTuner.h
include/Operators/: Matmul.h  Operators.h
lib/: CMakeLists.txt  KernelCodeGen.cc
lib/Analysis/: Analyzer.cc
lib/Conversion/: LoweringPasses.cc  Optimizer.cc  Rewriter.cc
lib/Operators/: Operators.cc
src/: CMakeLists.txt  main.cc
src/lib/: CMakeLists.txt  KernelCodeGen.cc
src/lib/Analysis/: Analyzer.cc
src/lib/Common/: ThreadPool.cc  Utils.cc  cJSON.cc
src/lib/Conversion/: LoweringPasses.cc  Optimizer.cc  PrintOpLowering.cc
src/lib/Conversion/General/: GeneralFuncs.cc  Rewriter.cc  Rewriter_.cc
src/lib/ModelManager/: ModelManager.cc
src/lib/Operators/: Matmul.cc  Operators.cc
stub_code/: VGG19.py  internal.py  main.py  model_manager.py  resnet50.py  设计.md
stub_code/src/: compiler.cpp
test/: CMakeLists.txt  test.cc
